--- a/packages/map-nav/package.json
+++ b/packages/map-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scbd/map-nav",
-  "version": "0.0.36",
+  "version": "0.0.37",
   "private": false,
   "license": "MIT",
   "main": "dist/MapNav.umd.min.js",
@@ -22,8 +22,8 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.9",
     "@amcharts/amcharts4-geodata": "^4.1.9",
-    "@scbd/am4-map-base": "^0.0.8",
-    "@scbd/default-options": "0.0.54",
+    "@scbd/am4-map-base": "^0.0.9",
+    "@scbd/default-options": "^0.0.54",
     "@scbd/self-embedding-component": "^0.0.9",
     "core-js": "^3.4.3",
     "limax": "^2.0.0",
